[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "follower_github"
version = "0.0.5"
description = "Uma biblioteca para listar seguidores ou perfis seguidos no GitHub."
authors = [{name = "Ricardo7c", email = "ricardo7c@hotmail.com"}]
license = {file = "LICENSE"}
dependencies = ["requests"]
